testsuite/tests/parser/should_compile/read048.hs

{-# OPTIONS_GHC -XEmptyDataDecls #-}

module Foo where

data Foo

