testsuite/tests/parser/should_fail/T15053.hs
{-# OPTIONS_GHC -O1 }
"
  #-}
